fixed overlapping error

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
     border: 1px solid black;
     position: fixed;
     width: 100%;
+    z-index: 1;
 }
 
 .menu:hover {
@@ -132,11 +133,13 @@ img.grayscale {
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
     filter: gray; /* IE6-9 */
     -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
-    z-index: -1;
-    position: relative;
+    /*position: relative;*/
+    /*z-index: -1;*/
 }
 
 img.grayscale:hover {
+    position: static;
+    z-index: 0;
     filter: none;
     -webkit-filter: grayscale(0%);
     transition-timing-function: ease;
@@ -169,6 +172,6 @@ img.grayscale:hover {
     width: 100%;
 }
 
-a:hover {
+.link:hover {
     color: rgb(251, 221, 93);
 }
